# adsAPI

./: LICENSE  README.md  pyproject.toml  requirements.txt
ads/: models.py  serializer.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_advertisement_price.py  0003_advertisement_status_alter_advertisement_price.py  0004_alter_advertisement_owner.py  0005_advertisement_ratings_alter_comment_ad.py
core/: settings.py  urls.py
